# tibba

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  bump_version.sh  entrypoint.sh
.github/workflows/: ci.yml  publish.yml
admin/scripts/: gen-api-types.sh
assets/: build_date  commit
configs/: commit_id.txt  default.toml  default.yml  dev.toml  dev.yml
db-entity-derive/: Cargo.toml
db-entity-derive/src/: lib.rs
docs/: crates.md  modules.md
migrations/: 20260606000001_create_permissions.sql  20260606000002_create_role_permissions.sql  20260606000003_seed_superadmin_permission.sql  20260606000004_users_add_email_verified.sql  20260606000005_create_user_oauth_links.sql  20260606000006_create_audit_logs.sql  20260610000001_users_add_totp.sql  20260611000001_create_api_keys.sql  20260611000002_create_jobs.sql  20260621000001_create_tenant_notes.sql  20260704000001_fix_softdelete_unique_indexes.sql
scripts/: publish.sh
sql/: README.md  create_audit_logs.sql  create_configs.sql  create_configurations.sql  create_detector_group_users.sql  create_detector_groups.sql  create_files.sql  create_http_detectors.sql  create_http_stats.sql  create_objects.sql  create_permissions.sql  create_role_permissions.sql  create_user_oauth_links.sql  create_users.sql  create_web_page_detectors.sql  files.sql  settings.sql  users.sql
sql/pg/: create_audit_logs.sql  create_configurations.sql  create_detector_group_users.sql  create_detector_groups.sql  create_docker_analyses.sql  create_files.sql  create_http_detectors.sql  create_http_stats.sql  create_objects.sql  create_permissions.sql  create_role_permissions.sql  create_token_accounts.sql  create_token_keys.sql  create_token_llms.sql  create_token_prices.sql  create_token_recharges.sql  create_token_usages.sql  create_user_oauth_links.sql  create_users.sql  create_web_page_detectors.sql  init.sql
src/: admin_web.rs  app_ctx.rs  asset.rs  cache.rs  config.rs  dal.rs  docker.rs  error.rs  feature.rs  httpstat.rs  i18n.rs  inline.js  job.rs  llm.rs  main.rs  metrics.rs  openapi.rs  router.rs  sql.rs  state.rs  tenant.rs  web.rs  web_page_stat.rs
src/asset/: mod.rs
src/cache/: mod.rs  multi_store.rs  redis_client.rs  redis_cluster_pool.rs  redis_pool.rs  (+4 more)
tests/: middleware_contract.rs
tibba-api/: Cargo.toml
tibba-api/configs/: default.toml  dev.toml  production.toml
tibba-api/src/: cache.rs  config.rs  dal.rs  httpstat.rs  main.rs  router.rs  sql.rs  state.rs
tibba-cache/: Cargo.toml  README.md
tibba-cache/src/: cache.rs  lib.rs  pool.rs  ttl_lru_store.rs  two_level_store.rs
tibba-config/: Cargo.toml  README.md
tibba-config/src/: app_config.rs  lib.rs
tibba-crypto/: Cargo.toml  README.md
tibba-crypto/src/: key_grip.rs  lib.rs  password.rs
tibba-email/: Cargo.toml  README.md
tibba-email/src/: lib.rs  service.rs
tibba-error/: Cargo.toml  README.md
tibba-error/src/: lib.rs
tibba-feature/: Cargo.toml  README.md
tibba-feature/src/: lib.rs
tibba-headless/: Cargo.toml
tibba-headless/src/: chrome.rs  lib.rs
tibba-hook/: Cargo.toml  README.md
tibba-hook/src/: lib.rs
tibba-i18n/: Cargo.toml  README.md
tibba-i18n/src/: lib.rs
tibba-job/: Cargo.toml  README.md
tibba-job/src/: lib.rs
tibba-jwt/: Cargo.toml  README.md
tibba-jwt/src/: claims.rs  lib.rs
tibba-llm/: Cargo.toml  README.md
tibba-llm/src/: anthropic.rs  lib.rs  openai.rs
tibba-middleware/: Cargo.toml  README.md
tibba-middleware/src/: common.rs  cors.rs  csrf.rs  entry.rs  http_cache.rs  idempotency.rs  lib.rs  limit.rs  rate_limit.rs  request_id.rs  security_headers.rs  session.rs  stack.rs  stats.rs  trace.rs  tracker.rs
tibba-model/: Cargo.toml  README.md
tibba-model-builtin/: Cargo.toml  README.md
tibba-model-builtin/src/: api_key.rs  audit_log.rs  detector_group.rs  detector_group_user.rs  file.rs  http_detector.rs  http_stat.rs  lib.rs  permission.rs  role_permission.rs  user_oauth_link.rs  web_page_detector.rs
tibba-model-token/: Cargo.toml  README.md
tibba-model-token/src/: account.rs  key.rs  lib.rs  llm.rs  price.rs  recharge.rs  service.rs  usage.rs
tibba-model/.sqlx/: query-cb4e5a67e138ce0600e3311621be8f3f14843ee9203d7b5b2738ae14cd3aaae1.json  query-d5d0fdd6ad36198e1f0b2839613560e86c99e0d92c20ef7ff9a66a3a18eea252.json  query-f3df96add4025bff704fa76b0ed39d73903e4304ee230bd68e3c0c2cdb495566.json
tibba-model/src/: configuration.rs  detector_group.rs  detector_group_user.rs  file.rs  http_detector.rs  http_stat.rs  lib.rs  model.rs  schema.rs  user.rs  web_page_detector.rs
tibba-notify/: Cargo.toml  README.md
tibba-notify/src/: lib.rs  wecom.rs
tibba-oauth/: Cargo.toml  README.md
tibba-oauth/src/: github.rs  google.rs  lib.rs
tibba-open-dal/: Cargo.toml
tibba-opendal/: Cargo.toml  README.md
tibba-opendal/src/: lib.rs  storage.rs
tibba-performance/: Cargo.toml  README.md
tibba-performance/src/: lib.rs
tibba-rbac/: Cargo.toml  README.md
tibba-rbac/src/: lib.rs  middleware.rs
tibba-rbac/tests/: middleware.rs
tibba-request/: Cargo.toml  README.md
tibba-request/src/: lib.rs  request.rs
tibba-router-common/: Cargo.toml  README.md
tibba-router-common/src/: lib.rs
tibba-router-file/: Cargo.toml  README.md
tibba-router-file/src/: lib.rs
tibba-router-model/: Cargo.toml  README.md
tibba-router-model/src/: lib.rs  router.rs
tibba-router-schema/: Cargo.toml
tibba-router-schema/src/: lib.rs
tibba-router-user/: Cargo.toml  README.md
tibba-router-user/src/: api_key.rs  email_verify.rs  jwt_auth.rs  lib.rs  login_guard.rs  oauth_github.rs  oauth_google.rs  password_reset.rs  totp.rs
tibba-scaffold/: Cargo.toml  README.md
tibba-scheduler/: Cargo.toml  README.md
tibba-scheduler/src/: lib.rs
tibba-session/: Cargo.toml  README.md
tibba-sql/: Cargo.toml  README.md
tibba-state/: Cargo.toml  README.md
tibba-tenant/: Cargo.toml  README.md
tibba-totp/: Cargo.toml  README.md
tibba-util/: Cargo.toml  README.md
tibba-validator/: Cargo.toml  README.md
tibba-web/: Cargo.toml
tibba-webhook/: Cargo.toml  README.md
web/: package.json  vite.config.ts
(+116 files in other folders)
