[package]
name = "tibba"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
ctor = "0.4.2"
futures = { workspace = true }
hostname = { workspace = true }
http = { workspace = true }
http-stat = "0.5.13"
humantime = { workspace = true }
nanoid = { workspace = true }
once_cell = { workspace = true }
quick-js = "0.4.1"
rand = { workspace = true }
reqwest = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
tibba-cache = { path = "./tibba-cache" }
tibba-config = { path = "./tibba-config" }
tibba-error = { path = "./tibba-error" }
tibba-headless = { path = "./tibba-headless" }
tibba-hook = { path = "./tibba-hook" }
tibba-middleware = { path = "./tibba-middleware" }
tibba-model = { path = "./tibba-model" }
tibba-opendal = { path = "./tibba-opendal" }
tibba-request = { path = "./tibba-request" }
tibba-router-common = { path = "./tibba-router-common" }
tibba-router-file = { path = "./tibba-router-file" }
tibba-router-model = { path = "./tibba-router-model" }
tibba-router-user = { path = "./tibba-router-user" }
tibba-scheduler = { path = "./tibba-scheduler" }
tibba-session = { path = "./tibba-session" }
tibba-sql = { path = "./tibba-sql" }
tibba-state = { path = "./tibba-state" }
tibba-util = { path = "./tibba-util" }
tibba-performance = { path = "./tibba-performance" }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { version = "0.6.6", features = [
    "compression-br",
    "compression-gzip",
    "compression-zstd",
] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }
validator = { workspace = true }
num_cpus = "1.17.0"

[profile.release]
codegen-units = 1
lto = true
strip = "debuginfo"

[workspace]
members = [
    "tibba-cache",
    "tibba-config",
    "tibba-crypto",
    "tibba-error",
    "tibba-hook",
    "tibba-middleware",
    "tibba-model",
    "tibba-opendal",
    "tibba-performance",
    "tibba-request",
    "tibba-router-common",
    "tibba-router-file",
    "tibba-router-user",
    "tibba-sql",
    "tibba-state",
    "tibba-util",
    "tibba-validator",
    "tibba-scheduler",
    "tibba-session",
    "tibba-router-model",
    "tibba-headless",
]


[workspace.dependencies]
arc-swap = "1.7.1"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = ["cookie", "cookie-signed"] }
base64 = "0.22.1"
bytes = "1.10.1"
bytesize = "2.0.1"
cached = "0.56.0"
captcha = "1.0.0"
chrono = "0.4.41"
config = "0.15.13"
cookie = "0.18.1"
dashmap = "6.1.0"
deadpool-redis = { version = "0.22.0", features = ["cluster", "rt_tokio_1"] }
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
hostname = "0.4.1"
http = "1.3.1"
http-body-util = "0.1.3"
humantime = "2.2.0"
image = "0.25.6"
lru = "0.16.0"
lz4_flex = "0.11.5"
mime = "0.3.17"
mime_guess = "2.0.5"
nanoid = "0.4.0"
once_cell = "1.21.3"
opendal = { version = "0.54.0", features = [
    "services-mysql",
    "layers-mime-guess",
    "services-s3",
] }
os_info = { version = "3.12.0", default-features = false }
rand = "0.9.1"
redis = { version = "0.32.4", features = ["tokio-comp", "aio"] }
reqwest = { version = "0.12.22", default-features = false, features = [
    "rustls-tls",
    "json",
] }
rust-embed = "8.7.0"
scopeguard = "1.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_path_to_error = "0.1.17"
serde_urlencoded = "0.7.1"
sha2 = "0.10.8"
snafu = "0.8.6"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql", "time"] }
strum = { version = "0.27.1", features = ["derive"] }
substring = "1.4.5"
sysinfo = "0.34.2"
time = { version = "0.3.41", features = ["serde"] }
tokio = { version = "1.47.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
tokio-cron-scheduler = { version = "0.14.0", features = ["signal", "english"] }
tower = { version = "0.5.2", features = ["timeout"] }
tracing = "0.1.41"
url = "2.5.4"
urlencoding = "2.1.3"
uuid = { version = "1.17.0", features = ["v7"] }
validator = { version = "0.20.0", features = ["derive"] }
zstd = "0.13.3"
