[package]
name = "tibba"
version = "0.2.2"
edition = "2024"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/tibba"
repository = "https://github.com/vicanso/tibba"
keywords = ["tibba"]
description = "tibba is a framework for building web applications"
default-run = "tibba"

[lints.clippy]
# Set the unwrap_used lint level to deny
unwrap_used = "deny"


[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
ctor = "1.0.7"
futures = { workspace = true }
hostname = { workspace = true }
http = { workspace = true }
http-stat = "0.6.2"
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
nanoid = { workspace = true }
once_cell = { workspace = true }
quick-js = "0.4.1"
rand = { workspace = true }
reqwest = { workspace = true }
resend-rs = { workspace = true }
mime_guess2 = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
tibba-cache = { path = "./tibba-cache" }
tibba-config = { path = "./tibba-config" }
tibba-email = { path = "./tibba-email" }
tibba-error = { path = "./tibba-error" }
tibba-hook = { path = "./tibba-hook" }
tibba-jwt = { path = "./tibba-jwt" }
tibba-llm = { path = "./tibba-llm" }
tibba-middleware = { path = "./tibba-middleware" }
tibba-model = { path = "./tibba-model" }
tibba-model-builtin = { path = "./tibba-model-builtin" }
tibba-model-token = { path = "./tibba-model-token" }
tibba-oauth = { path = "./tibba-oauth" }
tibba-opendal = { path = "./tibba-opendal" }
tibba-request = { path = "./tibba-request" }
tibba-router-common = { path = "./tibba-router-common" }
tibba-router-file = { path = "./tibba-router-file" }
tibba-router-model = { path = "./tibba-router-model" }
tibba-router-user = { path = "./tibba-router-user" }
tibba-scheduler = { path = "./tibba-scheduler" }
tibba-session = { path = "./tibba-session" }
tibba-sql = { path = "./tibba-sql" }
tibba-state = { path = "./tibba-state" }
tibba-util = { path = "./tibba-util" }
tibba-performance = { path = "./tibba-performance" }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { version = "0.6.11", features = [
    "compression-br",
    "compression-gzip",
    "compression-zstd",
] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { version = "0.3.23", features = ["local-time"] }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
validator = { workspace = true }
num_cpus = "1.17.0"
regex = "1.12.3"
glob = "0.3.3"
substring = { workspace = true }
toml = "1.1.2"

[profile.release]
codegen-units = 1
lto = true
strip = "debuginfo"

[workspace]
members = [
    "tibba-cache",
    "tibba-config",
    "tibba-crypto",
    "tibba-email",
    "tibba-error",
    "tibba-hook",
    "tibba-jwt",
    "tibba-middleware",
    "tibba-model",
    "tibba-model-builtin",
    "tibba-model-token",
    "tibba-opendal",
    "tibba-performance",
    "tibba-request",
    "tibba-oauth",
    "tibba-rbac",
    "tibba-router-common",
    "tibba-router-file",
    "tibba-router-user",
    "tibba-sql",
    "tibba-state",
    "tibba-util",
    "tibba-validator",
    "tibba-scheduler",
    "tibba-session",
    "tibba-router-model",
    "tibba-llm",
    "tibba-scaffold",
]


[workspace.dependencies]
anyhow = "1"
arc-swap = "1.9.1"
axum = { version = "0.8.9", features = ["multipart"] }
axum-extra = { version = "0.12.6", features = ["cookie", "cookie-signed"] }
base64 = "0.22.1"
bytes = "1.11.1"
bytesize = "2.3.1"
bytesize-serde = "0.2.1"
cached = "0.59.0"
captcha = "1.0.0"
chrono = "0.4.44"
config = "0.15.22"
cookie = "0.18.1"
dashmap = "6.1.0"
deadpool-redis = { version = "0.23.0", features = ["cluster", "rt_tokio_1"] }
dirs = "6.0.0"
futures = "0.3.32"
governor = "0.10.1"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = [
    "http-proto",
    "reqwest-blocking-client",
    "trace",
] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
hex = "0.4.3"
hmac = "0.13.0"
hostname = "0.4.2"
http = "1.4.1"
http-body-util = "0.1.3"
humantime = "2.3.0"
humantime-serde = "1.1.1"
jsonwebtoken = { version = "10.0.0", default-features = false }
resend-rs = { version = "0.25", default-features = false, features = [
    "rustls-tls",
] }
image = "0.25.10"
lru = "0.16.4"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false }
lz4_flex = "0.13.0"
mime = "0.3.17"
mime_guess2 = "2.3.1"
nanoid = "0.5.0"
once_cell = "1.21.4"
opendal = { version = "0.55.0", features = [
    "services-mysql",
    "layers-mime-guess",
    "services-s3",
    "services-fs",
    "services-http",
] }
os_info = { version = "3.14.0", default-features = false }
parse-size = "1.1.0"
path-absolutize = "3.1.1"
pretty_assertions = "1.4.1"
rand = "0.10.1"
redis = { version = "1.2.0", features = ["tokio-comp", "aio"] }
reqwest = { version = "0.13.4", default-features = false, features = [
    "rustls",
    "query",
    "json",
    "form",
] }
rust-embed = { version = "8.11.0", features = ["include-exclude"] }
scopeguard = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_path_to_error = "0.1.20"
serde_urlencoded = "0.7.1"
sha2 = "0.11.0"
snafu = "0.9.0"
sqlx = { version = "0.9.0", features = [
    "runtime-tokio",
    "postgres",
    "time",
    "chrono",
] }
strum = { version = "0.28.0", features = ["derive"] }
substring = "1.4.5"
sysinfo = "0.38.4"
time = { version = "0.3.47", features = ["serde"] }
tokio = { version = "1.52.3", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
tokio-cron-scheduler = { version = "0.15.1", features = ["signal", "english"] }
tower = { version = "0.5.3", features = ["timeout"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32.0"
url = "2.5.8"
urlencoding = "2.1.3"
uuid = { version = "1.23.1", features = ["v7"] }
validator = { version = "0.20.0", features = ["derive"] }
zstd = "0.13.3"

[dev-dependencies]
pretty_assertions = { workspace = true }
