[package]
name = "tibba-cache"
version = "0.1.0"
edition = "2024"

[lib]
name = "tibba_cache"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
deadpool-redis = { workspace = true }
humantime = { workspace = true }
lru = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
substring = { workspace = true }
tibba-config = { path = "../tibba-config" }
tibba-error = { path = "../tibba-error" }
tibba-util = { path = "../tibba-util" }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
validator = { workspace = true }
