[package]
name = "tibba-cache"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["tibba", "cache"]
description = "cache for tibba"

[lib]
name = "tibba_cache"
path = "src/lib.rs"

[dependencies]
# 单节点 / 集群均自建 Manager（deadpool-redis 的 Manager 无法注入 response_timeout），
# 故直接依赖 deadpool::managed + redis，不再需要 deadpool-redis
deadpool = { version = "0.13", default-features = false, features = [
    "managed",
    "rt_tokio_1",
] }
humantime-serde = { workspace = true }
lru = { workspace = true }
# cluster-async（含 cluster + aio）：集群池与 dedicated_conn 走 ClusterClient
redis = { workspace = true, features = ["cluster-async"] }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tibba-config = { path = "../tibba-config", version = "0.2.5" }
tibba-error = { path = "../tibba-error", version = "0.2.5" }
tibba-util = { path = "../tibba-util", version = "0.2.5" }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
validator = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["humantime-serde"]
