[package]
name = "tibba-config"
version = "0.1.2"
edition = "2024"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/tibba"
repository = "https://github.com/vicanso/tibba"
keywords = ["tibba", "config"]
description = "config for tibba"

[lib]
name = "tibba_config"
path = "src/lib.rs"

[dependencies]
bytesize-serde = { workspace = true }
config = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
parse-size = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
tibba-error = { path = "../tibba-error", version = "0.1.0" }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
