[package]
name = "tibba-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["tibba", "config"]
description = "config for tibba"

[lib]
name = "tibba_config"
path = "src/lib.rs"

[dependencies]
bytesize-serde = { workspace = true }
config = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
parse-size = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
tibba-error = { path = "../tibba-error", version = "0.2.6" }

[dev-dependencies]
pretty_assertions = { workspace = true }
