[package]
name = "tibba-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["tibba", "crypto"]
description = "crypto for tibba"

[lib]
name = "tibba_crypto"
path = "src/lib.rs"

[dependencies]
arc-swap = { workspace = true }
# Argon2id 密码哈希 + 盐随机源（rand_core 0.6）
argon2 = { workspace = true }
rand_core = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
snafu = { workspace = true }
tibba-error = { path = "../tibba-error", version = "0.2.5" }

[dev-dependencies]
pretty_assertions = { workspace = true }
