[package]
name = "tibba-email"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["tibba", "email", "resend"]
description = "email service abstraction for tibba"


[lib]
name = "tibba_email"
path = "src/lib.rs"

[dependencies]
resend-rs = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
tibba-config = { path = "../tibba-config", version = "0.2.5" }
tibba-error = { path = "../tibba-error", version = "0.2.5" }
tracing = { workspace = true }
