[package]
name = "tibba-error"
version = "0.1.0"
edition = "2024"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/tibba"
repository = "https://github.com/vicanso/tibba"
keywords = ["tibba", "error"]
description = "http error for tibba"

[lib]
name = "tibba_error"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
