[package]
name = "tibba-error"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["tibba", "error"]
description = "http error for tibba"

[lib]
name = "tibba_error"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
