[package]
name = "tibba-feature"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["tibba", "feature", "flags"]
description = "Redis-backed feature flags for tibba"

[lib]
name = "tibba_feature"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
tibba-cache = { path = "../tibba-cache", version = "0.2.6" }
tibba-error = { path = "../tibba-error", version = "0.2.6" }
