[package]
name = "tibba-headless"
version = "0.2.0"
edition = "2024"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/tibba"
repository = "https://github.com/vicanso/tibba"
keywords = ["tibba", "browser"]
description = "browser headless for tibba"


[lib]
name = "tibba_headless"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
dashmap = { workspace = true }
headless_chrome = "1.0.21"
image = { workspace = true }
palette = "0.7.6"
scopeguard = { workspace = true }
snafu = { workspace = true }
tibba-error = { path = "../tibba-error", version = "0.2.0" }
tokio = { workspace = true }
