[package]
name = "tibba-hook"
version = "0.1.0"
edition = "2024"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/tibba"
repository = "https://github.com/vicanso/tibba"
keywords = ["tibba", "hook"]
description = "hook for tibba"

[lib]
name = "tibba_hook"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }
tibba-error = { path = "../tibba-error", version = "0.1.0" }
tracing = { workspace = true }
