[package]
name = "tibba-hook"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["tibba", "hook"]
description = "hook for tibba"

[lib]
name = "tibba_hook"
path = "src/lib.rs"

[dependencies]
dashmap = { workspace = true }
tibba-error = { path = "../tibba-error", version = "0.2.5" }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
