[package]
name = "tibba-i18n"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["tibba", "i18n", "l10n"]
description = "Accept-Language negotiation and error-message localization for tibba"

[lib]
name = "tibba_i18n"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
serde_json = { workspace = true }
tibba-error = { path = "../tibba-error", version = "0.2.6" }

[dev-dependencies]
pretty_assertions = { workspace = true }
