[package]
name = "tibba-job"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["tibba", "job", "queue", "worker"]
description = "PostgreSQL SKIP LOCKED async job queue for tibba"

[lib]
name = "tibba_job"
path = "src/lib.rs"

[dependencies]
dashmap = { workspace = true }
metrics = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
# 定时轮询需要 time、优雅排空的关停信道需要 sync（watch），workspace 默认未启用，单独开启
tokio = { workspace = true, features = ["time", "sync"] }
tracing = { workspace = true }
tibba-error = { path = "../tibba-error", version = "0.2.6" }
