[package]
name = "tibba-jwt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["tibba", "jwt", "auth", "hs256"]
description = "JWT (HS256) auth path for tibba — access token + opaque refresh"


[lib]
name = "tibba_jwt"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
humantime-serde = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
tibba-error = { path = "../tibba-error", version = "0.2.5" }
tibba-util = { path = "../tibba-util", version = "0.2.5" }
tracing = { workspace = true }
