[package]
name = "tibba-llm"
version = "0.2.2"
edition = "2024"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/tibba"
repository = "https://github.com/vicanso/tibba"
keywords = ["tibba", "llm", "openai", "anthropic"]
description = "LLM client for tibba (OpenAI-compatible & Anthropic)"

[lib]
name = "tibba_llm"
path = "src/lib.rs"

[dependencies]
bytes = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tibba-error = { path = "../tibba-error", version = "0.2.2" }
tracing = { workspace = true }
