[package]
name = "tibba-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["tibba", "llm", "openai", "anthropic"]
description = "LLM client for tibba (OpenAI-compatible & Anthropic)"

[lib]
name = "tibba_llm"
path = "src/lib.rs"

[dependencies]
bytes = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tibba-error = { path = "../tibba-error", version = "0.2.6" }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
