[package]
name = "tibba-middleware"
version = "0.1.0"
edition = "2024"


[lib]
name = "tibba_middleware"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
scopeguard = { workspace = true }
snafu = { workspace = true }
tibba-cache = { path = "../tibba-cache" }
tibba-error = { path = "../tibba-error" }
tibba-session = { path = "../tibba-session" }
tibba-state = { path = "../tibba-state" }
tibba-util = { path = "../tibba-util" }
tokio = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }
