[package]
name = "tibba-middleware"
version = "0.1.0"
edition = "2024"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/tibba"
repository = "https://github.com/vicanso/tibba"
keywords = ["tibba", "middleware"]
description = "middleware for tibba"


[lib]
name = "tibba_middleware"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
scopeguard = { workspace = true }
snafu = { workspace = true }
tibba-cache = { path = "../tibba-cache", version = "0.1.0" }
tibba-error = { path = "../tibba-error", version = "0.1.0" }
tibba-session = { path = "../tibba-session", version = "0.1.0" }
tibba-state = { path = "../tibba-state", version = "0.1.0" }
tibba-util = { path = "../tibba-util", version = "0.1.1" }
tokio = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }
