[package]
name = "tibba-middleware"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["tibba", "middleware"]
description = "middleware for tibba"


[lib]
name = "tibba_middleware"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
governor = { workspace = true }
metrics = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
serde_json = { workspace = true }
tibba-cache = { path = "../tibba-cache", version = "0.2.6" }
tibba-error = { path = "../tibba-error", version = "0.2.6" }
tibba-session = { path = "../tibba-session", version = "0.2.6" }
tibba-state = { path = "../tibba-state", version = "0.2.6" }
tibba-util = { path = "../tibba-util", version = "0.2.6" }
tokio = { workspace = true }
tracing = { workspace = true }
# 入站请求创建服务端 span 并提取上游 W3C trace 上下文（分布式追踪）
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }
urlencoding = { workspace = true }
