[package]
name = "tibba-model-builtin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["tibba", "model"]
description = "built-in models for tibba (file, detector, http-stat, etc.)"

[lib]
name = "tibba_model_builtin"
path = "src/lib.rs"

[dependencies]
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
sqlx = { workspace = true }
substring = { workspace = true }
tokio = { workspace = true }
tibba-error = { path = "../tibba-error", version = "0.2.6" }
tibba-model = { path = "../tibba-model", version = "0.2.6" }
time = { workspace = true }
