[package]
name = "tibba-model-token"
version = "0.2.3"
edition = "2024"
authors = ["Tree Xie <tree.xie@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vicanso/tibba"
repository = "https://github.com/vicanso/tibba"
keywords = ["tibba", "model", "token", "billing"]
description = "token billing models for tibba (account, recharge, usage, price)"

[lib]
name = "tibba_model_token"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
sqlx = { workspace = true }
tibba-error = { path = "../tibba-error", version = "0.2.2" }
tibba-model = { path = "../tibba-model", version = "0.2.3" }
uuid = { workspace = true, features = ["v4"] }
time = { workspace = true }
