[package]
name = "tibba-model-token"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["tibba", "model", "token", "billing"]
description = "token billing models for tibba (account, recharge, usage, price)"

[lib]
name = "tibba_model_token"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
sqlx = { workspace = true }
tibba-error = { path = "../tibba-error", version = "0.2.6" }
tibba-model = { path = "../tibba-model", version = "0.2.6" }
uuid = { workspace = true, features = ["v4"] }
time = { workspace = true }
