[package]
name = "tibba-model"
version = "0.2.0"
edition = "2024"


[lib]
name = "tibba_model"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
sqlx = { workspace = true }
substring = { workspace = true }
tokio = { workspace = true }
tibba-error = { path = "../tibba-error" }
time = { workspace = true }
